config/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sprayproxy-route
  annotations:
    haproxy.router.openshift.io/hsts_header: "max-age=63072000"
spec:
  tls:
    termination: reencrypt 
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: sprayproxy
  port:
    targetPort: server
